@@ -21,6 +21,7 @@ Version 0.1.5
 - msvc6prj: fixed dependencies in project files 
 - msvc6prj: <optimize>speed optimized for size and vice versa, fixed
 - fixed win32 formats' "make clean" to delete precompiled headers files
+- autoconf: fixed to not accumulate outdated content in autoconf_inc.m4
 
 
 Version 0.1.4
